--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "lgbtq-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.13.0"
+  },
   "dependencies": {
     "@material-ui/core": "^4.8.3",
     "@material-ui/styles": "^4.8.2",
