--- a/package.json
+++ b/package.json
@@ -7,32 +7,32 @@
     "npm": "6.12.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.8.3",
-    "@material-ui/styles": "^4.8.2",
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/styles": "^4.10.0",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.1",
-    "bootstrap": "^4.4.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "bower": "^1.8.8",
-    "expect": "latest",
-    "history": "latest",
-    "mapbox-gl": "^1.7.0",
+    "expect": "^26.1.0",
+    "history": "^5.0.0",
+    "mapbox-gl": "^1.11.0",
     "material-kit-react": "^1.9.0",
     "material-ui": "^0.20.2",
-    "mdbreact": "^4.25.1",
-    "mocha": "^7.0.0",
-    "moment": "^2.24.0",
+    "mdbreact": "^4.27.0",
+    "mocha": "^7.2.0",
+    "moment": "^2.27.0",
     "prop-types": "latest",
     "rc-datetime-picker": "^1.6.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-datetime": "^2.16.3",
-    "react-dom": "^16.12.0",
-    "react-map-gl": "^5.2.2",
+    "react-dom": "^16.13.1",
+    "react-map-gl": "^5.2.7",
     "react-mapbox-autocomplete": "^0.2.3",
-    "react-mapbox-gl": "^4.8.2",
-    "react-router": "latest",
+    "react-mapbox-gl": "^4.8.6",
+    "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.3.0",
@@ -65,13 +65,13 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.0",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
     "install": "^0.13.0",
     "react-material-ui": "0.0.1",
     "react-moment": "^0.9.7",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "redux-devtools-extension": "^2.13.8",
-    "yarn": "^1.21.1"
+    "yarn": "^1.22.4"
   }
 }
