--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "npm": "6.12.0"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-default-from": "^7.10.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/styles": "^4.10.0",
     "@testing-library/jest-dom": "^4.2.4",
